--- a/GameEditor/GameEditor.csproj
+++ b/GameEditor/GameEditor.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-<RuntimeFrameworkVersion>2.2.0</RuntimeFrameworkVersion>
+<RuntimeIdentifiers>win10-x64;osx.10.12-x64;ubuntu.16.10-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +14,6 @@
     <ProjectReference Include="..\Hypochondriac\Hypochondriac.csproj" />
   </ItemGroup>
 <PropertyGroup>
-  <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+
 </PropertyGroup>
 </Project>
